# go-bitfield

./: BUILD.bazel  README.md  WORKSPACE  bitfield.go  bitlist.go  bitlist64.go  bitlist64_test.go  bitlist8.go  bitlist8_test.go  bitlist_bench_test.go  bitlist_test.go  bitvector.go  bitvector1024.go  bitvector1024_test.go  bitvector128.go  bitvector128_test.go  bitvector256.go  bitvector256_test.go  bitvector32.go  bitvector32_test.go  bitvector4.go  bitvector4_test.go  bitvector512.go  bitvector512_test.go  bitvector64.go  bitvector64_test.go  bitvector8.go  bitvector8_test.go  bitvector_test.go  doc.go  errors.go  go.mod  min.go  nogo_config.json
